# viam-camera-realsense

./: .canon.yaml  .gitignore  CMakeLists.txt  Makefile  README.md  camera_realsense.cpp  example-config.json  main.cpp  meta.json  viam-camera-realsense
.github/workflows/: appimage-amd64.yml  appimage-tag.yml  appimage.yml  docker-amd64.yml  docker.yml  integration.yml  main.yml  test.yml
etc/: Dockerfile.cuda.debian.bookworm  Dockerfile.debian.bookworm  Dockerfile.nvidia.cuda  example-config.json  viam-camera-realsense-aarch64.yml
integration/: go.mod  go.sum
integration/tests/: all_test.go  main_test.go
packaging/: .gitignore
packaging/appimages/: realsense-integration-tests-aarch64.yml  realsense-integration-tests-x86_64.yml  viam-camera-realsense-aarch64.yml  viam-camera-realsense-amd64.yml  viam-camera-realsense-latest-x86_64.AppImage.zsync  viam-camera-realsense-x86_64.yml
src/: camera_realsense.cpp  camera_realsense.hpp  encoding.hpp
test/: CMakeLists.txt  camera_realsense_test.cpp
tests/: CMakeLists.txt  camera_realsense_test.cpp
